# aiserver

./: .env  .gitignore  LICENSE  README.md  RELEASE.md  __init__.py  conftest.py  install.json  pyproject.toml  test_api.py  verify_templates.py
.github/workflows/: build.yml  check-release.yml
aiserver/: __init__.py  algorithm_prompts.py  algorithm_registry.py  algorithm_templates.py  config.py  context.py  handlers.py  prompts.py  providers.py  template_generator.py
aiserver/algorithms/: __init__.py  adapter.py  anomaly_detection.py  base.py  data_loading.py  data_operation.py  data_preprocessing.py  eda.py  plotting.py  trend.py  utils.py
aiserver/core/: context.py  history.py  log.py  session.py
aiserver/handlers/: __init__.py  algorithm_save.py  algorithm_validate.py  code_gen.py  data_analysis.py  library.py  models.py  session.py  system.py
aiserver/prompts/: algorithm.py  summary.py  system.py  templates.py  user.py
aiserver/tablewalker/: __init__.py  api.py  data_converter.py  field_mapper.py
aiserver/tests/: __init__.py  test_handlers.py
aiserver/utils/: code_analysis.py  code_manager.py  reload_helper.py
aiserver/validators/: __init__.py  algorithm_validator.py
aiserver/workflow_lib/: anomaly_detection.py  data_loading.py  data_operation.py  data_preprocessing.py  eda.py  plotting.py  trend.py
docs/: frontend_session_management_design.md  session_design.md  session_development_tasks.md
tests/: test_code_analysis.py  test_code_gen_chain.py  test_config.py  test_context.py  test_context_optimizer.py  test_history.py  test_providers.py
(+8 files in other folders)
