[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5"]
build-backend = "hatchling.build"

[project]
name = "aiserver"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
version = "0.1.0"
description = "AI Server - A backend extension for AI code generation services"
authors = [
    {name = "aiserver", email = "he.xiaoyu@163.com"}
]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "jupyter_server>=2.0.1,<3"
]
dynamic = ["keywords"]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-jupyter[server]>=0.6.0"
]

[project.urls]
homepage = "https://github.com/TerryPro/aiserver"
repository = "https://github.com/TerryPro/aiserver"
bugs = "https://github.com/TerryPro/aiserver/issues"

[tool.hatch.build.hooks.version]
path = "aiserver/_version.py"

[tool.check-wheel-contents]
ignore = ["W002"]
